--- a/src/index.html
+++ b/src/index.html
@@ -1,11 +1,20 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <meta charset="utf-8">
-  <title>Mp3Converter</title>
+  <title>Mp3 Converter HY</title>
   <base href="/">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <meta charset="utf-8">
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+  <meta name="mobile-web-app-capable" content="yes">
+
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+
+<!--  <noscript src="https://kit.fontawesome.com/f67224ab74.js" crossorigin="anonymous"></noscript>-->
+
+  <link rel="stylesheet" href="assets/icons/css/all.min.css">
+
 </head>
 <body>
   <app-root></app-root>
