--- a/src/index.html
+++ b/src/index.html
@@ -5,8 +5,10 @@
   <base href="/">
 
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
   <meta name="mobile-web-app-capable" content="yes">
+  <meta name="description" content="Youtube To MP3 Converter Online (Free)">
+  <meta name="keywords" content="Youtube To Mp3, Mp3 Youtube, Youtube, Mp3, Youtube to Audio, Youtube Converter, Youtube To Audio Converter, Free">
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 
