--- a/src/index.html
+++ b/src/index.html
@@ -14,6 +14,7 @@
 
   <link rel="stylesheet" href="assets/icons/css/all.min.css">
 
+  <link id="theme" rel="stylesheet" type="text/css" href="light-theme.css" />
 </head>
 <body>
   <app-root></app-root>
